--- a/wear/build.gradle
+++ b/wear/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    buildToolsVersion '26.0.2'
     defaultConfig {
         applicationId "com.xiaoyu.run4thirteenweeks"
         minSdkVersion 21
@@ -19,8 +19,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.support:wearable:2.0.0-alpha2'
-    compile 'com.google.android.gms:play-services-wearable:9.4.0'
-    provided 'com.google.android.wearable:wearable:1.0.0'
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.google.android.support:wearable:2.0.0-alpha2'
+    implementation 'com.google.android.gms:play-services-wearable:9.4.0'
+    compileOnly 'com.google.android.wearable:wearable:1.0.0'
 }
