--- a/mobile/build.gradle
+++ b/mobile/build.gradle
@@ -32,4 +32,6 @@ dependencies {
     implementation 'com.android.support:design:24.2.1'
     implementation 'com.android.support:multidex:1.0.0'
     testImplementation 'junit:junit:4.12'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
 }
